Mejoras en seguridad

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,6 +13,7 @@
       "@visitas/*": ["./src/app/containers/features/visitas/*"],
       "@seguridad/*": ["./src/app/containers/features/seguridad/*"],
       "@shared/*": ["./src/app/shared/*"],
+      "@app/*": ["./src/app/*"],
     }
   },
   "files": [
