--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "coreui-free-angular-admin-template",
+  "name": "gestion-de-visitas",
   "version": "4.5.27",
-  "copyright": "Copyright 2023 creativeLabs Łukasz Holeczek",
+  "copyright": "Copyright 2023 Ingenieria en Informatica Q4",
   "license": "MIT",
-  "author": "The CoreUI Team (https://github.com/orgs/coreui/people) and contributors",
-  "homepage": "https://coreui.io/angular",
+  "author": "Alumnos de ingeniería en informática Q4 2023",
   "config": {
     "coreui_library_short_version": "4.5",
     "coreui_library_docs_url": "https://coreui.io/angular/docs/"
